--- a/final-project-fe/Pages/Admin/UserManager/Detail.cshtml
+++ b/final-project-fe/Pages/Admin/UserManager/Detail.cshtml
@@ -40,7 +40,7 @@
                         <!-- Avatar and Status Section -->
                         <div class="col-md-4 text-center mb-4">
                             <div class="user-avatar mb-3">
-                                <img src="@(Model.AvatarUrl ?? "https://i.pinimg.com/736x/bc/43/98/bc439871417621836a0eeea768d60944.jpg")"
+                                <img src="@(string.IsNullOrEmpty(Model.UserDetail.UserMetaData.Avatar) ? "https://i.pinimg.com/736x/bc/43/98/bc439871417621836a0eeea768d60944.jpg" : Model.AvatarUrl)"
                                      class="img-fluid rounded-circle"
                                      style="width: 180px; height: 180px; object-fit: cover;"
                                      alt="User Avatar" />
