--- a/final-project-fe/Pages/Shared/_Layout.cshtml
+++ b/final-project-fe/Pages/Shared/_Layout.cshtml
@@ -90,6 +90,9 @@
 				border: 2px solid #e1e8ed;
 			}
 
+		.topbar {
+            height: 70px;
+        }
 		.custom-user-menu {
 			position: absolute;
 			top: 100%;
@@ -321,8 +324,9 @@
 									<a asp-page="/UserProfile"><i class="ti-user"></i> View Profile</a>
 									<a asp-page="/Chatting"><i class="bi bi-wechat"></i> Chatting</a>
 									<a asp-page="/UserCourse"><i class="bi bi-book-half"></i> My Own Course</a>
+                                    <a asp-page="/EventPage"><i class="bi bi-patch-check"></i> Event</a>
 								}
-								<a asp-page="/EventPage"><i class="bi bi-patch-check"></i> Event</a>
+								
 								<a asp-page="/Logout"><i class="bi bi-box-arrow-in-left" style="font-size: 115%;"></i> Logout</a>
 							</text>
 						}
@@ -471,16 +475,15 @@
 			</div>
 		</div>
 	</footer>
+	<!-- Load jQuery đầu tiên -->
+	<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
-	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="~/js/site.js" asp-append-version="true"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-	@* <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script> *@
-	<script src="~/js/main.min.js"></script>
-	<script src="~/js/script.js"></script>
-	<script src="~/js/map-init.js"></script>
+	<!-- Sau đó mới load các script khác -->
+	<script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="/js/site.js" asp-append-version="true"></script>
+	<script src="/js/main.min.js"></script>
+	<script src="/js/script.js"></script>
+	<script src="/js/map-init.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.5/signalr.min.js"></script>
 	<script>
 		const apiBaseUrl = "@BaseUrl";   // từ ApiSettings
