--- a/final-project-fe/Pages/Chatting.cshtml
+++ b/final-project-fe/Pages/Chatting.cshtml
@@ -1135,7 +1135,7 @@
             ui: {
                 createChatPartnerItem(partner) {
                     const fullName = partner.fullName || partner.email || 'Unknown User';
-                    const avatar = partner.avatar || 'https://i.postimg.cc/FHnRyy40/default.jpg';
+                    const avatar = partner.avatar+"?"+"sp=r&st=2025-05-28T06:11:09Z&se=2026-01-01T14:11:09Z&spr=https&sv=2024-11-04&sr=c&sig=YdDYGbzpNp4XPSKVVDM0bb411XOEPgA8b0i2PFCfc1c%3D" || 'https://i.postimg.cc/FHnRyy40/default.jpg';
                     const lastTime = partner.lastSentAt || partner.updateAt || partner.createAt;
 
                     const div = document.createElement('div');
