--- a/final-project-fe/Pages/Admin/CourseManager/ListPending.cshtml
+++ b/final-project-fe/Pages/Admin/CourseManager/ListPending.cshtml
@@ -155,7 +155,7 @@
                                                 <form method="post" asp-page="/Admin/CourseManager/CourseApproval" asp-route-id="@course.CourseId" asp-route-status="Approved">
                                                     <button type="submit" class="btn btn-link btn-success btn-sm"" onclick="event.preventDefault(); showConfirm({
                                                             type: 'success' ,
-                                                            title: 'Ignore reports' ,
+                                                            title: 'Approve Course' ,
                                                             message: 'Are you sure you want to approve this course?' ,
                                                             confirmText: 'Approved' ,
                                                             cancelText: 'Cancel' ,
@@ -169,7 +169,7 @@
                                                 <form method="post" asp-page="/Admin/CourseManager/CourseApproval" asp-route-id="@course.CourseId" asp-route-status="Rejected">
                                                     <button type="submit" class="btn btn-link btn-danger btn-sm"" onclick="event.preventDefault(); showConfirm({
                                                             type: 'danger' ,
-                                                            title: 'Ignore reports' ,
+                                                            title: 'Reject Course' ,
                                                             message: 'Are you sure you want to reject this course?' ,
                                                             confirmText: 'Rejected' ,
                                                             cancelText: 'Cancel' ,
