--- a/final-project-fe/Pages/UserPage.cshtml
+++ b/final-project-fe/Pages/UserPage.cshtml
@@ -1874,7 +1874,7 @@
 		}
 
 		.upgrade-card {
-			background: linear-gradient(135deg, #636363 0%, #1c76c2 100%);
+			background: linear-gradient(135deg, #757575 0%, #000000 100%);
 			border-radius: 12px;
 			transition: transform 0.2s ease-in-out;
 		}
@@ -1937,9 +1937,8 @@
 
 		/* Profile Header */
 		.profile-header {
-			background: linear-gradient(135deg, #1c76c2 0%, #000000 100%);
+			background: linear-gradient(135deg, #000000 0%, #818181 100%);
 			padding: 40px 0;
-			margin-bottom: 30px;
 		}
 
 		.profile-content {
@@ -2007,6 +2006,8 @@
 	}
 
 	.edit-avatar-btn {
+		background-color: black;
+		border-color: black;
 		position: absolute;
 		bottom: 5px;
 		right: 5px;
@@ -2021,6 +2022,8 @@
 	}
 
 		.edit-avatar-btn:hover {
+			background-color: grey;
+			border-color: grey;
 			transform: scale(1.1);
 			box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 		}
@@ -2054,7 +2057,7 @@
 			height: 140px;
 			border-radius: 50%;
 			object-fit: cover;
-			border: 3px solid #064071;
+			border: 3px solid #3e3f3f;
 			box-shadow: 0 4px 15px rgba(0,0,0,0.1);
 		}
 
